# cpp-bootstrap

./: CMakeLists.txt  README.md  conanfile.py
src/mycorp/mylib/: CMakeLists.txt  mymodule.cpp  mymodule.hpp  mymodule.t.cpp
